2005-01-19  Fred Fish  <fnf@specifixinc.com>

	* mips-dis.c (no_aliases): New disassembly option flag.
	(set_default_mips_dis_options): Init no_aliases to zero.
	(parse_mips_dis_option): Handle no-aliases option.
	(print_insn_mips): Ignore table entries that are aliases
	if no_aliases is set.
	(print_insn_mips16): Ditto.
	* mips-opc.c (mips_builtin_opcodes): Add initializer column for
	new pinfo2 member and add INSN_ALIAS initializers as needed.  Also
	move WR_MACC and RD_MACC initializers from pinfo to pinfo2.
	* mips16-opc.c (mips16_opcodes): Ditto.

2005-01-17  Andrew Stubbs  <andrew.stubbs@st.com>

	* sh-opc.h (arch_sh2a_or_sh3e,arch_sh2a_or_sh4): Correct definition.
	(inheritance diagram): Add missing edge.
	(arch_sh1_up): Rename arch_sh_up to match external name to make life
	easier for the testsuite.
	(arch_sh4_nofp_up): Likewise, rename arch_sh4_nofpu_up.
	(arch_sh4a_nofp_up): Likewise, rename arch_sh4a_nofpu_up.
	(arch_sh2a_nofpu_or_sh4_nommu_nofpu_up): Add missing 
	arch_sh2a_or_sh4_up child.
	(sh_table): Do renaming as above.
	Correct comment for ldc.l for gas testsuite to read.
	Remove rogue mul.l from sh1 (duplicate of the one for sh2).
	Correct comments for movy.w and movy.l for gas testsuite to read.
	Correct comments for fmov.d and fmov.s for gas testsuite to read.

2005-01-12  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (OP_E): Don't ignore scale in SIB for 64 bit mode.

2005-01-12  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (OP_E): Ignore scale when index == 0x4 in SIB.

2005-01-10  Andreas Schwab  <schwab@suse.de>

	* disassemble.c (disassemble_init_for_target) <case
	bfd_arch_ia64>: Set skip_zeroes to 16.
	<case bfd_arch_tic4x>: Set skip_zeroes to 32.

2004-12-23  Tomer Levi  <Tomer.Levi@nsc.com>

	* crx-opc.c: Mark 'bcop' instruction as RELAXABLE.

2004-12-14  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* avr-dis.c: Prettyprint. Added printing of symbol names in all
	memory references. Convert avr_operand() to C90 formatting.
